--- a/el proyecte grande sprint 1/Views/Home/Index.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/Index.cshtml
@@ -2,7 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <button class="nav-link" type="button" id="btn" onclick="location.href='@Url.Action("PicturesPage","Home")'">Discover!</button> <br />
+    <form >
+    <input class="search-bar" type="text" placeholder="Search">
+    <br /><br />
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button> </form>
+
 </div>
+
