--- a/el proyecte grande sprint 1/wwwroot/css/site.css
+++ b/el proyecte grande sprint 1/wwwroot/css/site.css
@@ -69,3 +69,36 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.container {
+    text-align: center;
+    width: 300px;
+    height: 200px;
+    padding-top: 100px;
+    position:relative;
+}
+.child {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px; /* apply negative top and left margins to truly center the element */
+}
+
+.search-bar {
+    width: 100%;
+    margin: auto;
+    padding: 10 px;
+    border : 3px solid gray;
+}
+
+#btn {
+    margin: auto;
+    width: 100%;
+    background-color: white;
+    border: 3px solid gray;
+    padding: 10px;
+    font-family: 'Segoe UI';
+}
+
