fix : fix height of footer

--- a/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
+++ b/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="footer-container">
             &copy; 2021 - Lens - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </div>
     </footer>
