--- a/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
+++ b/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - el_proyecte_grande_sprint_1</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
 </head>
 <body>
     <header>
@@ -18,6 +19,9 @@
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" data-abc="true" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" data-abc="true" asp-area="" asp-controller="User" asp-action="Login">Login</a>
                     </li>
                 </ul>
             </div>
