--- a/el proyecte grande sprint 1/wwwroot/css/site.css
+++ b/el proyecte grande sprint 1/wwwroot/css/site.css
@@ -61,6 +61,8 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    background-image: url('../backgrounds/forest.jpg');
+    background-size: cover;
 }
 .footer {
     position: absolute;
