--- a/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
+++ b/el proyecte grande sprint 1/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                     <li class="nav-item active">
                         <a class="nav-link" data-abc="true" asp-area="" asp-controller="User" asp-action="Login">Login</a>
                     </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" data-abc="true" asp-area="" asp-controller="User" asp-action="SignUp">Sign up</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -36,6 +39,7 @@
 
         </main>
     </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="footer-container">
