--- a/el proyecte grande sprint 1/wwwroot/css/site.css
+++ b/el proyecte grande sprint 1/wwwroot/css/site.css
@@ -11,6 +11,9 @@ a.navbar-brand {
 a {
   color: #0366d6;
 }
+h1{
+    justify-content:center;
+}
 
 .btn-primary {
   color: #fff;
@@ -81,25 +84,28 @@ body {
     position: relative;
 }
 
-.container {
+.search-container {
     text-align: center;
     min-height: 100%;
-    width: 300px;
-    height: 200px;
-    padding-top: 100px;
-    position:relative;
+    position: relative;
+    width: 600px;
+    margin-top: 20%;
+    margin-left: 23%;
+/*    background-color:whitesmoke;
+    opacity:70%;*/
 }
 
 .search-bar {
-    width: 100%;
+    border-radius: 5px;
+    width: 430px;
     margin: auto;
     padding: 10 px;
-    border : 3px solid gray;
+    border: 3px solid gray;
 }
 
 #btn {
     margin: auto;
-    width: 100%;
+    width: 200px;
     background-color: white;
     border: 3px solid gray;
     padding: 10px;
@@ -125,6 +131,45 @@ input[type="password"] {
     top: 50%;
     left: 50%;
     margin: -25px 0 0 -25px; /* apply negative top and left margins to truly center the element */
+}
+
+
+
+
+/* Image container CSS styling*/
+
+
+.images-center {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: 1170px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 2rem;
+}
+
+.image {
+    box-shadow: 0 4px 5px 4px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+
+.img-container {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    height: 100%;
+    max-height: 300px;
+}
+
+.image-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-height: 15rem;
+    transition: var(--mainTransition);
+    object-fit: cover;
+    object-position: center center;
 }
 
 
