--- a/el proyecte grande sprint 1/wwwroot/css/site.css
+++ b/el proyecte grande sprint 1/wwwroot/css/site.css
@@ -99,7 +99,6 @@ body {
     border-radius: 5px;
     width: 430px;
     margin: auto;
-    padding: 10 px;
     border: 3px solid gray;
 }
 
@@ -170,6 +169,11 @@ input[type="password"] {
     transition: var(--mainTransition);
     object-fit: cover;
     object-position: center center;
+}
+
+.logo-container{
+    width:100%;
+    justify-content:center;
 }
 
 
