feat : add image view pagen skeleton

--- a/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
@@ -1,10 +1,18 @@
-﻿
+﻿@model List<Picture> 
+
 @{
     ViewData["Title"] = "Pictures page";
 }
-    <h1>@ViewData["Title"]</h1>
+<div class="logo-container"><h1>@ViewData["Title"]</h1></div>
 
-    <div class="container">
-        <p>Pictures come here</p>
-    </div>
+
+<div class='images-center'>
+    <article class="image">
+        <div class='img-container'>
+            <img src="" alt="image" class='image-img'>
+        </div>
+        <h3>Picture title</h3>
+    </article>
+
+</div>
 
