feat : change main page style

--- a/el proyecte grande sprint 1/Views/Home/Index.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
+<div class="search-container">
     <button class="nav-link" type="button" id="btn" onclick="location.href='@Url.Action("PicturesPage","Home")'">Discover!</button> <br />
     <form >
     <input class="search-bar" type="text" placeholder="Search">
