--- a/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
@@ -1,18 +1,20 @@
-﻿@model List<Picture> 
+﻿@model List<Picture>
 
 @{
     ViewData["Title"] = "Pictures page";
 }
-<div class="logo-container"><h1>@ViewData["Title"]</h1></div>
-
+<div class="logo-container"><h1>&zwnj;</h1></div>
 
 <div class='images-center'>
-    <article class="image">
-        <div class='img-container'>
-            <img src="" alt="image" class='image-img'>
-        </div>
-        <h3>Picture title</h3>
-    </article>
 
+    @foreach (var picture in Model)
+    {
+        <article class="image">
+            <div class='img-container'>
+                <img src="@picture.Route" alt="image" class='image-img'>
+            </div>
+        </article>
+
+    }
 </div>
 
