feat : polishing frontend of the website

--- a/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/PicturesPage.cshtml
@@ -3,16 +3,19 @@
 @{
     ViewData["Title"] = "Pictures page";
 }
-<div class="logo-container"><h1>&zwnj;</h1></div>
+<div class="logo-container">
+
+    <h1>&zwnj;</h1>
+</div>
+<h3>Explore</h3>
+<br />
 
 <div class='images-center'>
 
     @foreach (var picture in Model)
     {
-        <article class="image">
-            <div class='img-container'>
-                <img src="@picture.Route" alt="image" class='image-img'>
-            </div>
+        <article class="image-container">
+            <img src="@picture.Route" alt="image" class='image-img'>
         </article>
 
     }
