--- a/el proyecte grande sprint 1/Views/User/Login.cshtml
+++ b/el proyecte grande sprint 1/Views/User/Login.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewData["Title"] = "Login";
 }
-<div class="container">
+<div class="search-container">
+    <h3>Log in</h3>
         <form>
             <input class="search-bar" type="text" placeholder="Username">
             <br />
