--- a/el proyecte grande sprint 1/wwwroot/css/site.css
+++ b/el proyecte grande sprint 1/wwwroot/css/site.css
@@ -2,78 +2,82 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
-h1{
-    justify-content:center;
+
+h1 {
+    justify-content: center;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    background-image: url('../backgrounds/forest.jpg');
+    background-color: whitesmoke;
     background-size: cover;
 }
+
 .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px; 
+    height: 60px;
     white-space: nowrap;
-    line-height: 60px; 
+    line-height: 60px;
     background-color: black;
     opacity: 90%;
 }
@@ -91,7 +95,7 @@ body {
     width: 600px;
     margin-top: 20%;
     margin-left: 23%;
-/*    background-color:whitesmoke;
+    /*    background-color:whitesmoke;
     opacity:70%;*/
 }
 
@@ -138,6 +142,36 @@ input[type="password"] {
 /* Image container CSS styling*/
 
 
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+image-container > a, image-container::after {
+    --ratio: calc(var(--w) / var(--h));
+    --row-height: 9rem;
+    flex-basis: calc(var(--ratio) * var(--row-height));
+}
+
+.image-container > a {
+    margin: 0.25rem;
+    flex-grow: calc(var(--ratio) * 100);
+}
+
+.image-container::after {
+    --w: 2;
+    --h: 1;
+    content: '';
+    flex-grow: 1000000;
+}
+
+.image-container > a > img {
+    display: block;
+    width: 100%;
+}
+
+
+
 .images-center {
     width: 90vw;
     margin: 0 auto;
@@ -149,8 +183,7 @@ input[type="password"] {
 }
 
 .image {
-    box-shadow: 0 4px 5px 4px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
+    box-shadow: 0 4px 5px 4px rgba(0, 0, 0, 0.3) cursor: pointer;
 }
 
 .img-container {
@@ -171,10 +204,7 @@ input[type="password"] {
     object-position: center center;
 }
 
-.logo-container{
-    width:100%;
-    justify-content:center;
+.logo-container {
+    width: 100%;
+    justify-content: center;
 }
-
-
-
