--- a/el proyecte grande sprint 1/Views/Home/Index.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/Index.cshtml
@@ -2,12 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="search-container">
-    <button class="nav-link" type="button" id="btn" onclick="location.href='@Url.Action("PicturesPage","Home")'">Discover!</button> <br />
-    <form >
-    <input class="search-bar" type="text" placeholder="Search">
-    <br /><br />
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button> </form>
+<body style="background-image: url(backgrounds/forest.jpg)";
 
-</div>
+>
+    <div class="search-container">
+        <button class="nav-link" type="button" id="btn" onclick="location.href='@Url.Action("PicturesPage","Home")'">Discover!</button> <br />
+        <form>
+            <input class="search-bar" type="text" placeholder="Search">
+            <br /><br />
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
 
+    </div>
+</body>
