--- a/el proyecte grande sprint 1/Views/Home/Index.cshtml
+++ b/el proyecte grande sprint 1/Views/Home/Index.cshtml
@@ -2,9 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<body style="background-image: url(backgrounds/forest.jpg)";
+<body style="background-image: url(backgrounds/spacex.jpg)";
 
 >
+
     <div class="search-container">
         <button class="nav-link" type="button" id="btn" onclick="location.href='@Url.Action("PicturesPage","Home")'">Discover!</button> <br />
         <form>
