feat : add background image for login page

--- a/el proyecte grande sprint 1/Views/User/Login.cshtml
+++ b/el proyecte grande sprint 1/Views/User/Login.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Login";
 }
+
+<body style="background-image: url(backgrounds/spacex.jpg)" ;>
+
 <div class="search-container">
     <h3>Log in</h3>
         <form>
@@ -13,4 +16,4 @@
         </form>
 
 </div>
-
+    </body>
