--- a/el proyecte grande sprint 1/project-lens/src/App.css
+++ b/el proyecte grande sprint 1/project-lens/src/App.css
@@ -47,3 +47,76 @@
   width: 100%;
   text-align: center;
 }
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+  background-color: whitesmoke;
+  background-size: cover;
+}
+
+/* Image container CSS styling*/
+
+
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+image-container > a, image-container::after {
+  --ratio: calc(var(--w) / var(--h));
+  --row-height: 9rem;
+  flex-basis: calc(var(--ratio) * var(--row-height));
+}
+
+.image-container > a {
+  margin: 0.25rem;
+  flex-grow: calc(var(--ratio) * 100);
+}
+
+.image-container::after {
+  --w: 2;
+  --h: 1;
+  content: '';
+  flex-grow: 1000000;
+}
+
+.image-container > a > img {
+  display: block;
+  width: 100%;
+}
+
+
+
+.images-center {
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 1170px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-column-gap: 1.5rem;
+  grid-row-gap: 2rem;
+}
+
+.image {
+  box-shadow: 0 4px 5px 4px rgba(0, 0, 0, 0.3);
+   cursor: pointer;
+}
+
+.img-container {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  height: 100%;
+  max-height: 300px;
+}
+
+.image-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  min-height: 15rem;
+  transition: var(--mainTransition);
+  object-fit: cover;
+  object-position: center center;
+}
