--- a/el proyecte grande sprint 1/project-lens/src/App.css
+++ b/el proyecte grande sprint 1/project-lens/src/App.css
@@ -120,3 +120,22 @@ image-container > a, image-container::after {
   object-fit: cover;
   object-position: center center;
 }
+
+.uploadPageButton {
+    background-color: black!important;
+    color: white!important;
+    border: 2px solid black!important;
+    padding: 16px 32px!important;
+    text-align: center!important;
+    font-size: 16px!important;
+    margin: 4px 2px!important;
+    transition-duration: 0.4s!important;
+    cursor: pointer!important;
+    width:20em!important;
+    height:3em!important;
+}
+
+    .uploadPageButton:hover {
+        background-color: white !important;
+        color: black !important;
+    }
